entry image gap when centered https://github.com/maithemewp/mai-engine/issues/486

--- a/assets/scss/components/entry/_entry-image.scss
+++ b/assets/scss/components/entry/_entry-image.scss
@@ -106,6 +106,10 @@
 	--entry-image-border-radius: 0;
 }
 
+.has-boxed.has-image-center .has-image-first {
+	--entry-image-link-margin-top: var(--spacing-lg);
+}
+
 .has-image-background {
 	--entry-position: relative;
 	--entry-image-width: 100%;
